--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "slick-carousel": "^1.8.1",
+    "turbolinks": "^5.2.0"
   }
 }
