--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==3.0.6
 django-appconf==1.0.4
 django-compressor==2.4
 django-compressor-toolkit==0.6.0
+django-inline-svg==0.1.1
 django-libsass==0.8
 django-sass-processor==0.8
 django-taggit==1.2.0
