--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
 asgiref==3.2.7
 astroid==2.4.1
-autopep8==1.5.2
-Django==3.0.6
+Django==3.0.7
 django-appconf==1.0.4
 django-compressor==2.4
 django-compressor-toolkit==0.6.0
-django-filter==2.2.0
+django-filter==2.3.0
 django-inline-svg==0.1.1
 django-libsass==0.8
 django-sass-processor==0.8
-django-taggit==1.2.0
-importlib-metadata==1.6.0
+django-taggit==1.3.0
+gitdb==4.0.5
+GitPython==3.1.3
+importlib-metadata==1.6.1
 isort==4.3.21
-lazy-object-proxy==1.4.3
+lazy-object-proxy==1.5.0
 libsass==0.20.0
 Markdown==3.2.2
 mccabe==0.6.1
@@ -28,7 +29,8 @@ pytz==2020.1
 PyYAML==5.3.1
 rcssmin==1.0.6
 rjsmin==1.1.0
-six==1.14.0
+six==1.15.0
+smmap==3.0.4
 sqlparse==0.3.1
 toml==0.10.1
 typed-ast==1.4.1
