rebase master to dev

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ __pycache__/
 *.so
 .vscode/
 .idea/
-static/CACHE/*
-carpatianknights/front_end/static/CACHE/*
+static/CACHE/
+carpatianknights/front_end/static/CACHE/
 # Distribution / packaging
 .Python
 env/
