--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
   },
   "homepage": "https://github.com/KorenivskyOlexandr/carpatianknights#readme",
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
+    "@babel/core": "^7.10.4",
+    "autoprefixer": "^9.8.4",
     "babel-preset-es2015": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browserify": "^14.4.0",
-    "node-sass": "^4.5.3",
-    "postcss-cli": "^4.1.0"
+    "babelify": "^8.0.0",
+    "browserify": "^16.5.1",
+    "node-sass": "^4.14.1",
+    "postcss-cli": "^7.1.1",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0"
   },
   "dependencies": {
-    "bootstrap": "^4.5.0",
+    "body-scroll-lock": "^3.0.3",
+    "bootstrap": "^5.0.0-alpha1",
     "jquery": "^3.5.1",
     "slick-carousel": "^1.8.1",
     "turbolinks": "^5.2.0"
