--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ astroid==2.4.1
 Django==3.0.7
 django-appconf==1.0.4
 django-compressor==2.4
+django-pipeline==2.0.4
 django-compressor-toolkit==0.6.0
 django-filter==2.3.0
 django-inline-svg==0.1.1
 django-libsass==0.8
 django-sass-processor==0.8
+django-webpack-loader==0.7.0
 django-taggit==1.3.0
 gitdb==4.0.5
 GitPython==3.1.3
