--- a/package.json
+++ b/package.json
@@ -18,10 +18,17 @@
   "homepage": "https://github.com/KorenivskyOlexandr/carpatianknights#readme",
   "devDependencies": {
     "autoprefixer": "^9.8.6",
+    "babel-loader": "^8.1.0",
     "babel-preset-latest": "^6.24.1",
+    "css-loader": "^4.2.2",
+    "file-loader": "^6.1.0",
     "node-sass": "^4.14.1",
     "postcss-cli": "^7.1.1",
-    "webpack-bundle-tracker": "^1.0.0-alpha.1"
+    "resolve-url-loader": "^3.1.1",
+    "sass-loader": "^10.0.1",
+    "style-loader": "^1.2.1",
+    "webpack-bundle-tracker": "^0.4.3",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "@babel/core": "^7.11.1",
@@ -30,10 +37,17 @@
     "bootstrap": "^5.0.0-alpha1",
     "browserify": "^16.5.2",
     "countup.js": "^2.0.6",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jquery": "^3.5.1",
+    "mini-css-extract-plugin": "^0.11.0",
+    "popper.js": "^1.16.1",
+    "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
     "slick-carousel": "^1.8.1",
     "turbolinks": "^5.2.0",
-    "waypoints": "^4.0.1"
+    "url-loader": "^4.1.0",
+    "waypoints": "^4.0.1",
+    "webpack": "^4.44.1"
   },
   "babel": {
     "presets": [
