--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,9 @@ asgiref==3.2.10
 astroid==2.4.2
 Django==3.1.1
 django-appconf==1.0.4
-django-compressor==2.4
-django-pipeline==2.0.5
-django-compressor-toolkit==0.6.0
 django-filter==2.3.0
-django-inline-svg==0.1.1
-django-libsass==0.8
-django-sass-processor==0.8.1
-django-webpack-loader==0.7.0
+django-pipeline==2.0.5
 django-taggit==1.3.0
-gitdb==4.0.5
-GitPython==3.1.7
 importlib-metadata==1.7.0
 isort==5.4.2
 lazy-object-proxy==1.4.3
@@ -36,5 +28,6 @@ smmap==3.0.4
 sqlparse==0.3.1
 toml==0.10.1
 typed-ast==1.4.1
+upgrade-requirements==1.7.0
 wrapt==1.12.1
 zipp==3.1.0
