--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@babel/core": "^7.11.1",
     "babelify": "^10.0.0",
     "body-scroll-lock": "^3.0.3",
-    "bootstrap": "^5.0.0-alpha3",
+    "bootstrap": "^5.0.0-beta1",
     "browserify": "^16.5.2",
     "countup.js": "^2.0.6",
     "extract-text-webpack-plugin": "^3.0.2",
