--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-appconf==1.0.4
 django-filter==2.3.0
 django-pipeline==2.0.5
 django-taggit==1.3.0
+django-widget-tweaks==1.4.8
 importlib-metadata==1.7.0
 isort==5.4.2
 lazy-object-proxy==1.4.3
@@ -12,7 +13,6 @@ libsass==0.20.1
 Markdown==3.2.2
 mccabe==0.6.1
 Pillow==7.2.0
-pkg-resources==0.0.0
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
 pycodestyle==2.6.0
