--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "browserify": "^16.5.2",
     "countup.js": "^2.0.6",
     "extract-text-webpack-plugin": "^3.0.2",
+    "lightgallery.js": "^1.4.0",
     "mini-css-extract-plugin": "^0.11.0",
     "nodemon": "^2.0.4",
     "postcss-loader": "^3.0.0",
